Project/Docker-Kubernetes/DEV/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webapp-application-deployment-dev
spec:
 replicas: 1
 selector:
  matchLabels:
   app: my-app-dev
 template:
  metadata:
   labels:
    app: my-app-dev
  spec:
   containers:
   - name: my-app-dev
     image: docker.io/goudsagar/webapp-app-tomcat:latest
     imagePullPolicy: IfNotPresent
     ports:
     - containerPort: 8080
