Project/Docker-Kubernetes/DEV/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: webapp-application-service-dev
spec:
 ports:
 - name: http
   protocol: TCP
   port: 80
   targetPort: 8080
 selector:
   app: my-app-dev
 type: NodePort
